[gd_scene load_steps=5 format=3 uid="uid://ub70qa1m0jqn"]

[ext_resource type="Texture2D" uid="uid://bfdngln55ffhv" path="res://icon.svg" id="1_5sgud"]
[ext_resource type="Script" path="res://sample.gd" id="1_xi2t4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qvl1"]
bg_color = Color(0.967429, 0.349535, 0.509922, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cb07u"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0330808, 0.303378, 0.3626, 0.6)
shadow_size = 2
shadow_offset = Vector2(1, 1)

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xi2t4")

[node name="PlayerInfoBox" type="Panel" parent="."]
layout_mode = 1
offset_right = 424.0
offset_bottom = 163.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0qvl1")

[node name="AvatarFrame" type="Panel" parent="PlayerInfoBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -74.0
offset_right = 153.0
offset_bottom = 68.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cb07u")

[node name="Avatar" type="TextureRect" parent="PlayerInfoBox/AvatarFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -60.0
offset_right = 60.5
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5sgud")
expand_mode = 1

[node name="Nickname" type="Label" parent="PlayerInfoBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 184.0
offset_top = 39.0
offset_right = 324.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 24
text = "coco lay lay"

[node name="ScoreInfoBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -368.0
offset_bottom = 161.0
grow_horizontal = 0

[node name="AvatarFrame" type="Panel" parent="ScoreInfoBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -147.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 152.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cb07u")

[node name="Avatar" type="TextureRect" parent="ScoreInfoBox/AvatarFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -60.0
offset_right = 60.5
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5sgud")
expand_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -30.0
offset_right = 212.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "Play
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 363.0
offset_top = 295.0
offset_right = 504.0
offset_bottom = 353.0
text = "Next
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
